--- a/src/components/MeetOurHeros/herosCard.css
+++ b/src/components/MeetOurHeros/herosCard.css
@@ -7,6 +7,11 @@
   height: 33vh;
   text-align: center;
   transition: transform 0.3s ease;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  position: relative;
 }
 .heros-image {
   width: 70px;
@@ -36,10 +41,13 @@
 }
 
 .hero-card .social-icons {
+  position: absolute;
+  bottom: 15px;
+  left: 0;
+  right: 0;
   display: flex;
   justify-content: center;
 }
-
 .hero-card .social-icons a {
   color: #0073b1;
   font-size: 20px;
